--- a/config/docker-compose.yml
+++ b/config/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.4'
+name: pay-a-friend
 
 # declare volumes
 volumes:
@@ -14,10 +15,7 @@ services:
       - EVENTSTORE_CLUSTER_SIZE=1
       - EVENTSTORE_RUN_PROJECTIONS=All
       - EVENTSTORE_START_STANDARD_PROJECTIONS=true
-      - EVENTSTORE_EXT_TCP_PORT=1113
-      - EVENTSTORE_EXT_HTTP_PORT=2113
       - EVENTSTORE_INSECURE=true
-      - EVENTSTORE_ENABLE_EXTERNAL_TCP=true
       - EVENTSTORE_ENABLE_ATOM_PUB_OVER_HTTP=true
     ports:
       - "1113:1113"
@@ -52,5 +50,5 @@ services:
     depends_on:
       - mongodb
     ports:
-      - "8081:8081"
+      - "8082:8081"
       
