--- a/src/Pay.WebApp/appsettings.json
+++ b/src/Pay.WebApp/appsettings.json
@@ -14,8 +14,12 @@
     "ClientId": "pay.webapp",
     "ClientSecret": "secret"
   },
-  "ApiConfig": {
-    "VerificationAPI": "https://localhost:5003"
+  "VerificationApi": {
+    "Url": "https://localhost:5003/api/verify",
+    "DraftRoute": "/draft",
+    "DobRoute": "/dob",
+    "AddressRoute": "/address",
+    "SubmitRoute": "/submit"
   },
   "LocalUrls" : {
     "ReturnUrl": "https://localhost:6001"
