--- a/src/Pay.WebApp/Pay.WebApp.csproj
+++ b/src/Pay.WebApp/Pay.WebApp.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Pay.Shared\Pay.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
